name:                bouncy
version:             0.1.0.0
synopsis:            Bounces HTTP -> HTTPS
homepage:            http://github.com/dysinger/bouncy
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable bouncy
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4 && <5
                     , base-prelude
                     , bytestring
                     , http-types
                     , text
                     , transformers
                     , wai >= 3
                     , warp
