name:                rdr2tls
version:             0.1.0.0
synopsis:            Simply Redirects All HTTP to HTTPS
homepage:            http://github.com/dysinger/rdr2tls
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable rdr2tls
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4 && <5
                     , base-prelude
                     , bytestring
                     , cabal-file-th
                     , http-types
                     , optparse-applicative
                     , template-haskell
                     , time
                     , wai >= 3
                     , wai-extra
                     , warp
